fixed the home, login and signup page. Now responsive and background doesnt cut off

--- a/src/components/views/styles/HomePageView.css
+++ b/src/components/views/styles/HomePageView.css
@@ -23,14 +23,15 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
+        justify-self: stretch;
+        overflow: auto;
     }
+
     .container, .card{
         display: flex;
         flex-direction: column;
-        vertical-align: -webkit-baseline-middle;
+        align-items: center;
 
-        
     }
   }
 
