--- a/src/components/views/styles/LoginPageView.css
+++ b/src/components/views/styles/LoginPageView.css
@@ -1,11 +1,12 @@
-.page {
+
+body {
   background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-
 }
+
 @media (min-width:1000px){
   
 
@@ -43,4 +44,31 @@
 
 .login-button:hover {
   background-color: beige;
+}
+
+@media screen and (max-width: 1000px) {
+  * {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+  }
+  .page1 {
+      background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      -o-background-size: cover;     
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      justify-self: stretch;
+      overflow: auto;
+      display: flex;
+      
+  }
+  .center{
+    display: grid;
+    justify-content: center;
+    width: fit-content;
+  }
 }
