--- a/src/components/views/styles/ProfileView.css
+++ b/src/components/views/styles/ProfileView.css
@@ -43,3 +43,11 @@
     }
 
 }
+
+.containcard {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
+    
+}
+
